# billymacwinkvm

./: Cargo.toml  README.md  build.rs
docs/: architecture.md  dev-setup.md  fable-freeze-investigation.md  freeze-tracing-guide.md  mac-virtual-hid.md  test-plan.md  windows-host.md
scripts/: analyze-latency-log.py  auto-latency-lab.sh  check-mac-vhid.sh  diagnose-addrinuse.ps1  mac-awdl-ab-test.sh  mac-cgevent-client.sh  mac-karabiner-client.sh  mac-log-client.sh  package-windows-kit.sh  parallels-host-smoke.sh  parallels-interactive-test.sh  parallels-probe.sh  start-karabiner-daemon.sh  test-local.sh  test-parallels.sh  windows-real-preflight.ps1
src/: cli.rs  clipboard.rs  hid.rs  latency.rs  main.rs  platform.rs  protocol.rs  trace.rs  trace_analyze.rs  transport.rs
src/platform/: macos.rs  windows.rs
