[package]
name = "softkvm"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.95"
bytes = "1.9.0"
clap = { version = "4.5.23", features = ["derive"] }
hex = "0.4.3"
hmac = "0.12.1"
rand = "0.8.5"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
sha2 = "0.10.8"
tokio = { version = "1.49.0", features = ["io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.11.0", features = ["v4", "serde"] }
async-trait = "0.1.83"
base64 = "0.22"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10.1"
objc2 = "0.6.4"
objc2-app-kit = { version = "0.3.2", features = [
  "NSApplication",
  "NSRunningApplication",
  "NSStatusBar",
  "NSStatusItem",
  "NSStatusBarButton",
  "NSButton",
  "NSControl",
  "NSView",
  "NSResponder",
  "NSCell",
  "NSMenu",
  "NSMenuItem",
  "NSPasteboard",
  "NSPasteboardItem",
  "NSBitmapImageRep",
  "NSImageRep",
  "NSGraphics",
] }
objc2-foundation = "0.3.2"

[target.'cfg(windows)'.dependencies]
png = "0.17"
windows = { version = "0.62.2", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_Media",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Input",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_Shell",
  "Win32_System_DataExchange",
  "Win32_System_Memory",
  "Win32_System_Ole",
  "Win32_System_LibraryLoader",
  "Win32_System_Threading",
] }
